--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,12 +9,16 @@ workflows:
         APP_STORE_CONNECT_KEY_IDENTIFIER: $APP_STORE_CONNECT_KEY_IDENTIFIER
         APP_STORE_CONNECT_PRIVATE_KEY: $APP_STORE_CONNECT_PRIVATE_KEY
         APP_STORE_CONNECT_USERNAME: $APP_STORE_CONNECT_USERNAME
-      
-      # Xcode-specific settings
-      xcode: latest # Use the latest stable Xcode version
-      cocoapods: default # Automatically install CocoaPods dependencies
+
+      # Xcode and other settings
+      xcode: latest
+      cocoapods: default
 
     scripts:
+      - name: Print Ruby Version
+        script: |
+          ruby -v # Ensure Ruby is installed and show version for debugging purposes
+
       - name: Install Bundler
         script: |
           gem install bundler
@@ -22,7 +26,7 @@ workflows:
 
       - name: Install dependencies using Bundler
         script: |
-          # Add verbose output to diagnose issues
+          # Use verbose logging to diagnose issues with `bundle install`
           bundle install --verbose || exit 1
           bundle exec pod install --verbose || exit 1
 
